# Spectra

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
Spectra/: CONTRIBUTING.md  Cargo.toml  README.md  index.html
Spectra-Windows/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json
Spectra-Windows/crates/spectra-api/src/: lib.rs
Spectra-Windows/crates/spectra-api/src/commands/: environment.rs  export.rs  history.rs  oauth.rs  request.rs
Spectra-Windows/crates/spectra-core/: Cargo.toml
Spectra-Windows/crates/spectra-core/src/: auth_signing.rs  context.rs  cookies.rs  error.rs  request_engine.rs  secrets.rs
Spectra-Windows/crates/spectra-core/src/export/: openapi.rs
Spectra-Windows/crates/spectra-core/src/import/: postman.rs
Spectra-Windows/crates/spectra-mcp/: README.md
Spectra-Windows/crates/spectra-mcp/src/: automation_client.rs  main.rs  server.rs
Spectra-Windows/crates/spectra-tauri/: Cargo.toml  tauri.conf.json
Spectra-Windows/crates/spectra-tauri/icons/: icon.icns
Spectra-Windows/crates/spectra-tauri/src/: commands.rs  lib.rs
Spectra-Windows/crates/spectra-tauri/src/automation/: mod.rs  screenshot.rs
Spectra-Windows/scripts/: build-sidecar.js  install-mcp.sh
Spectra-Windows/src/: App.css  App.tsx  Breadcrumb.tsx  ConsolePanel.tsx  ContextMenu.tsx  EnvironmentPanel.tsx  ErrorBoundary.tsx  ImportModal.tsx  RequestTabs.tsx  RequestTree.tsx  ResponsePanel.tsx  ScopeAuthModal.tsx  SettingsModal.tsx  VarTextarea.tsx  api.ts  types.ts
Spectra-Windows/src/store/: settings.ts  tab.ts
Spectra-Windows/src/worker/: formatter.test.ts
Spectra/crates/spectra-api/src/: dto.rs
Spectra/crates/spectra-api/src/commands/: folder.rs  history.rs  mod.rs  request.rs  saved_auth.rs  saved_response.rs  settings.rs  workspace.rs
Spectra/crates/spectra-core/src/: lib.rs  model.rs  oauth2.rs  oauth_flow.rs  request_engine.rs  storage.rs  variables.rs
Spectra/crates/spectra-core/src/import/: curl.rs  mod.rs
Spectra/crates/spectra-mcp/src/: automation_client.rs  main.rs  server.rs
Spectra/crates/spectra-tauri/: tauri.conf.json
Spectra/crates/spectra-tauri/src/: lib.rs  main.rs
Spectra/crates/spectra-tauri/src/automation/: mod.rs  (+1 more)
Spectra/src/: App.css  App.tsx  EnvironmentPanel.tsx  HistoryPanel.tsx  OAuth2Panel.tsx  SettingsModal.tsx  TopTabBar.tsx  VariablePopoverContext.tsx  WorkspaceSwitcher.tsx  theme.ts
Spectra/src/store/: workspace.ts
Spectra/src/worker/: formatter.ts
crates/spectra-api/: Cargo.toml
crates/spectra-api/src/commands/: import.rs  mod.rs  oauth.rs  request.rs
crates/spectra-core/: Cargo.toml
crates/spectra-core/src/: model.rs  oauth_flow.rs  request_engine.rs  secrets.rs  storage.rs
crates/spectra-core/src/export/: curl.rs  mod.rs  postman.rs
crates/spectra-core/src/import/: har.rs  openapi.rs
crates/spectra-mcp/: Cargo.toml
crates/spectra-mcp/src/: automation_client.rs  server.rs
crates/spectra-tauri/: Cargo.toml  tauri.conf.json
crates/spectra-tauri/icons/: icon.icns
crates/spectra-tauri/src/: commands.rs  lib.rs
crates/spectra-tauri/src/automation/: mod.rs
src/: App.css  App.tsx  AuthPanel.tsx  ExportModal.tsx  HistoryPanel.tsx  OAuth2Panel.tsx  RequestTabs.tsx  RequestTree.tsx  ScopeAuthModal.tsx  SettingsModal.tsx  VarInput.tsx  VarTextarea.tsx  VariableEditPopover.tsx  WorkspaceSwitcher.tsx  api.ts  theme.test.ts  types.ts
