[workspace]
resolver = "2"
members = [
    "crates/spectra-core",
    "crates/spectra-api",
    "crates/spectra-tauri",
    "crates/spectra-mcp",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
ulid = { version = "1", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = "1"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
open = "5"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
serde_yaml = "0.9"
shell-words = "1"
